@@ -156,7 +156,7 @@ $wgUploadPath       = false; ///< defaults to "{$wgScriptPath}/images"
 $wgUploadDirectory	= false; ///< defaults to "{$IP}/images"
 $wgHashedUploadDirectory	= true;
 $wgLogo				= false; ///< defaults to "{$wgStylePath}/common/images/wiki.png"
-$wgFavicon			= '/favicon.ico';
+$wgFavicon			= false; ///< will be treated as '/favicon.ico' anyway by user agents
 $wgAppleTouchIcon   = false; ///< This one'll actually default to off. For iPhone and iPod Touch web app bookmarks
 $wgMathPath         = false; ///< defaults to "{$wgUploadPath}/math"
 $wgMathDirectory    = false; ///< defaults to "{$wgUploadDirectory}/math"
