@@ -341,6 +341,8 @@ this. Was used when mwEmbed was going to be an extension.
 * (bugs 18407, 18409) Special:Upload is now listed on Special:Specialpages only
   if uploads are enabled and the user can access it
 * (bug 17988) Spaces before [[Category:]] links are no longer ignored
+* (bug 19392) Favicon, apple-touch-icon links matching the defaults are no 
+  longer sent
 
 == API changes in 1.16 ==
 
